--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,16 +9,21 @@ environment:
   sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
+
   flutter:
     sdk: flutter
   supabase_auth_ui:
     path: ../
+  supabase_flutter: ^1.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/logos/
+    - images/
