--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -49,6 +49,8 @@ android {
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
        // minSdkVersion flutter.minSdkVersion
         minSdkVersion 20
+       // minSdkVersion 8
+
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
