--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,13 +14,21 @@ dependencies:
     sdk: flutter
   supabase_auth_ui:
     path: ../
-  supabase_flutter: ^1.3.0
+  supabase_flutter: ^2.3.2
+  marquee: ^2.0.3
+  #supabase_flutter: ^1.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.1
+  #flutter_launcher_icons: ^0.13.1
+
+    #flutter_icons:
+    # android: "launcher icon"
+    #ios: true
+  #image_path: "images/contact.png"
 
 flutter:
   uses-material-design: true
