--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  supabase_flutter: ^1.4.0
+  #supabase_flutter: ^1.4.0
+  supabase_flutter: ^2.3.2
   email_validator: ^2.0.1
   font_awesome_flutter: ^10.0.0
   webview_flutter: ^4.4.0
-  supabase: ^1.11.11
+  #supabase: ^1.11.11
+
 
 dev_dependencies:
   flutter_test:
