--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,8 +12,9 @@ dependencies:
 
   flutter:
     sdk: flutter
-  supabase_auth_ui:
-    path: ../
+  supabase_auth_ui: ^0.4.2
+  sms_autofill: ^2.2.0
+
   supabase_flutter: ^2.3.2
   marquee: ^2.0.3
   #supabase_flutter: ^1.3.0
