--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   email_validator: ^2.0.1
   font_awesome_flutter: ^10.0.0
   webview_flutter: ^4.4.0
+  google_sign_in: ^6.2.1
+  twilio_flutter: 0.2.2
   #supabase: ^1.11.11
 
 
